@startuml

title __GESTPROD's Class Diagram__\n

  package Metier {
    class Catalogue {
    }
  }
  

  package Modele {
    class CatalogueDAO_Oracle {
    }
  }
  

  package Modele {
    class CatalogueDAO_XML {
    }
  }
  

  package Controleur {
    class ControleurAchatVente {
    }
  }
  

  package Controleur {
    class ControleurCatalogue {
    }
  }
  

  package Controleur {
    class ControleurCreate {
    }
  }
  

  package Controleur {
    class ControleurDelete {
    }
  }
  

  package Modele {
    interface FabriqueAbstraite {
    }
  }
  

  package Modele {
    class FactoryDAO_Oracle {
    }
  }
  

  package Modele {
    class FactoryDAO_XML {
    }
  }
  

  package Affichage {
    class FenetreAccueil {
    }
  }
  

  package Affichage {
    class FenetreAchat {
    }
  }
  

  package Affichage {
    class FenetreAffichage {
    }
  }
  

  package Affichage {
    class FenetreNouveauProduit {
    }
  }
  

  package Affichage {
    class FenetreNouvelleCategorie {
    }
  }
  

  package Affichage {
    class FenetrePrincipale {
    }
  }
  

  package Affichage {
    class FenetreSuppressionCategorie {
    }
  }
  

  package Affichage {
    class FenetreSuppressionProduit {
    }
  }
  

  package Affichage {
    class FenetreVente {
    }
  }
  

  package Metier {
    interface I_Catalogue {
    }
  }
  

  package Modele {
    interface I_CatalogueDAO {
    }
  }
  

  package Metier {
    interface I_Categorie {
    }
  }
  

  package Metier {
    interface I_Produit {
    }
  }
  

  package Modele {
    interface I_ProduitDAO {
    }
  }
  

  package Metier {
    class Produit {
    }
  }
  

  package Modele {
    class ProduitAdaptateurDAO_XML {
    }
  }
  

  package Modele {
    class ProduitDAO_Oracle {
    }
  }
  

  package Modele {
    class ProduitDAO_XML {
    }
  }
  

  Catalogue -up-|> I_Catalogue
  CatalogueDAO_Oracle -up-|> I_CatalogueDAO
  CatalogueDAO_XML -up-|> I_CatalogueDAO
  FactoryDAO_Oracle -up-|> FabriqueAbstraite
  FactoryDAO_XML -up-|> FabriqueAbstraite

  Produit -up-|> I_Produit
  ProduitAdaptateurDAO_XML -up-|> I_ProduitDAO
  ProduitAdaptateurDAO_XML o-- ProduitDAO_XML : produitDAO_xml
  ProduitDAO_Oracle -up-|> I_ProduitDAO


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
